1999-07-19  Harri Porten  <porten@kde.org>

	* pppdata.cpp: fixed a cause of those "Timeout expired" errors: if 
	the user never set the speed of the serial port gpppdata would return
	an empty string as speed(). The modem initialization code would
	fall back to 57600 but no speed would be passed to pppd. Whatever
	pppd does in this case (I haven't checked the sources yet) breaks the
	negotiation process.

1999-07-13  Harri Porten  <porten@kde.org>

	* added "Mode 7bit" and "Mode 8bit" script commands for CompuServe
	users. 7bit will simply strip off the highest bit to deal with the
	incoming 7E1 data. Write operations are not affected.
	* modem.cpp: try a tcsendbreak() if tcgetattr() fails. Ask for
	feedback if that solved the "modem is busy" error for anyone.
	* modem.cpp: read data in multiple chunks of up to 200 bytes. This 
	should speed up things and avoid problems with the socket notifier. 

1999-07-11  Harri Porten  <porten@kde.org>

	* connect.cpp: moved some code from readChar() into checkBuffers() 
	to clean up the setExpect() race condition fix.

1999-07-06  Harri Porten  <porten@kde.org>

	* modem.cpp: adhere to the lock file format described in the
	Serial HOWTO (10 digits pid and a newline).
	* edit.cpp: fixed highlighting in ScriptWidget
	* connect.cpp: fixed race condition that might have lead to data not
	being caught by "Expect" (found by Arch Harris <arch@cs.jmu.edu>)

1999-06-11  Harri Porten  <porten@kde.org>

	* pppdata.cpp: line termination will default to CR instead of CR/LF.

1999-06-10  Harri Porten  <porten@kde.org>

	* modem.cpp: fixed check for stale lock file ((s)traced down by
	Duane Ellis <duane@skyhigh.com>)

1999-04-30  Harri Porten  <porten@kde.org>

	* conwindow.cpp: fixed deleting of old geometry layout
	* logview/loginfo.cpp: added #include <string.h> for strsep
	* "PPP support missing" is no longer fatal. Just a warning.
	* pppstatdlg.cpp: update statistic data even if widget is not visible.